--- a/style.css
+++ b/style.css
@@ -15,3 +15,9 @@
       background-position: 0% 50%;
     }
   }
+
+  .gallery img {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 20px;
+  }
