--- a/style.css
+++ b/style.css
@@ -18,7 +18,13 @@
 
   .gallery img {
     width: 100%;
-    height: 100%;
+    height: auto;
     margin-bottom: 20px;
   }
+
+.font{
+  font-size: large;
+  font-weight: 800;
+}
+
 
