Modify contact section

--- a/style.css
+++ b/style.css
@@ -27,4 +27,14 @@
   font-weight: 800;
 }
 
+.map{
+  width:500px;
+  height:600px;
+}
+
+.map iframe{
+  height:100%;
+  width:100%;
+  border:none;
+}
 
